objects/BigMachines__Field_Mapping__c.object
<CustomObject>
    <description>An object used to associate a field in Oracle CPQ Cloud to a field in Salesforce.</description>
    <fields>
        <fullName>BigMachines__Configuration_Record__c</fullName>
        <label>Site</label>
        <referenceTo>BigMachines__Configuration_Record__c</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>BigMachines_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BigMachines__Object_Mapping__c</fullName>
        <label>Object Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote -&gt; Opportunity</fullName>
                    <default>true</default>
                    <label>Quote -&gt; Opportunity</label>
                </value>
                <value>
                    <fullName>Quote Product -&gt; Opportunity Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Source_Field_Label__c</fullName>
        <label>Source Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Source_Field_Name__c</fullName>
        <label>Source Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Target_Field_Label__c</fullName>
        <label>Target Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Target_Field_Name__c</fullName>
        <label>Target Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Field Mappings</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BigMachines__Object_Mapping_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( BigMachines__Object_Mapping__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>BigMachines__Object_Mapping__c</errorDisplayField>
        <errorMessage>You may not select &quot;None&quot; for the value of Object Mapping</errorMessage>
    </validationRules>
</CustomObject>